--- a/src/htdocs/aashto-2009.html
+++ b/src/htdocs/aashto-2009.html
@@ -45,8 +45,13 @@
 
     <dt id="siteClass">siteClass</dt>
     <dd>
-      Site Class, as defined in Table 3.4.2.1-1 of seismic design reference document
-      <br/>Options: <code>A</code> for "Hard rock", <code>B</code> for "Rock", <code>C</code> for "Very dense soil and soft rock", <code>D</code> for "Stiff soil", <code>E</code> (See Table 3.4.2.1-1)
+      Site Class, as defined in Table 3.4.2.1-1 of seismic design reference document<br/>
+      Options:<br/>
+      <code>A</code> for "Hard rock",<br/>
+      <code>B</code> for "Rock",<br/>
+      <code>C</code> for "Very dense soil and soft rock",<br/>
+      <code>D</code> for "Stiff soil",<br/>
+      <code>E</code> (See Table 3.4.2.1-1)
     </dd>
 
     <dt id="title">title</dt>
