Minor edit to index.html

--- a/src/htdocs/index.html
+++ b/src/htdocs/index.html
@@ -58,7 +58,7 @@
   </ul>
   <h4>AASHTO</h4>
   <ul>
-    <li><a href="aashto-2009.html">2009 AASHTO Standard (AASHTO-2009)</a></li>
+    <li><a href="aashto-2009.html">2009 AASHTO Guide Specifications (AASHTO-2009)</a></li>
   </ul>
   <h2>Component Data End Points</h2>
   <ul>
