--- a/src/htdocs/aashto-2009.html
+++ b/src/htdocs/aashto-2009.html
@@ -47,10 +47,10 @@
     <dd>
       Site Class, as defined in Table 3.4.2.1-1 of seismic design reference document<br/>
       Options:<br/>
-      <code>A</code> for "Hard rock",<br/>
-      <code>B</code> for "Rock",<br/>
-      <code>C</code> for "Very dense soil and soft rock",<br/>
-      <code>D</code> for "Stiff soil",<br/>
+      <code>A</code> for "Hard rock"<br/>
+      <code>B</code> for "Rock"<br/>
+      <code>C</code> for "Very dense soil and soft rock"<br/>
+      <code>D</code> for "Stiff soil"<br/>
       <code>E</code> (See Table 3.4.2.1-1)
     </dd>
 
@@ -74,7 +74,7 @@
 
         <dt id="output-reference-document">referenceDocument</dt>
         <dd>
-          Seismic design reference document, &ldquo;AASHTO-2009&rdquo;
+          Seismic design reference document: &ldquo;AASHTO-2009&rdquo;
         </dd>
 
         <dt id="output-status">status</dt>
@@ -194,7 +194,11 @@
                 griddedValuesID
               </dt>
               <dd>
-                Identifier for underlying gridded values: "1998-HI-AASHTO-05-050-R1.rnd" for Hawaii, "2002-US-AASHTO-05-050-R1.rnd" for the conterminous United States, "2003-PRVI-AASHTO-05-050-R1.rnd" for Puerto Rico & the U.S. Virgin Islands, "2006-AK-AASHTO-05-050-R1.rnd" for Alaska
+                Identifier for underlying gridded values:<br/>
+                "1998-HI-AASHTO-05-050-R1.rnd" for Hawaii<br/>
+                "2002-US-AASHTO-05-050-R1.rnd" for the conterminous United States<br/>
+                "2003-PRVI-AASHTO-05-050-R1.rnd" for Puerto Rico & the U.S. Virgin Islands<br/>
+                "2006-AK-AASHTO-05-050-R1.rnd" for Alaska
               </dd>
 
             <dt id="data-metadata-spatialInterpolationMethod">
