--- a/src/htdocs/aashto-2009.html
+++ b/src/htdocs/aashto-2009.html
@@ -47,10 +47,10 @@
     <dd>
       Site Class, as defined in Table 3.4.2.1-1 of seismic design reference document<br/>
       Options:<br/>
-      <code>A</code> for "Hard rock"<br/>
-      <code>B</code> for "Rock"<br/>
-      <code>C</code> for "Very dense soil and soft rock"<br/>
-      <code>D</code> for "Stiff soil"<br/>
+      <code>A</code> for &ldquo;Hard rock&rdquo;<br/>
+      <code>B</code> for &ldquo;Rock&rdquo;<br/>
+      <code>C</code> for &ldquo;Very dense soil and soft rock&rdquo;<br/>
+      <code>D</code> for &ldquo;Stiff soil&rdquo;<br/>
       <code>E</code> (See Table 3.4.2.1-1)
     </dd>
 
@@ -79,7 +79,7 @@
 
         <dt id="output-status">status</dt>
         <dd>
-          Either "success" or "error"
+          Either &ldquo;success&rdquo; or &ldquo;error&rdquo;
         </dd>
 
         <dt id="output-url">url</dt>
@@ -195,10 +195,10 @@
               </dt>
               <dd>
                 Identifier for underlying gridded values:<br/>
-                "1998-HI-AASHTO-05-050-R1.rnd" for Hawaii<br/>
-                "2002-US-AASHTO-05-050-R1.rnd" for the conterminous United States<br/>
-                "2003-PRVI-AASHTO-05-050-R1.rnd" for Puerto Rico & the U.S. Virgin Islands<br/>
-                "2006-AK-AASHTO-05-050-R1.rnd" for Alaska
+                &ldquo;1998-HI-AASHTO-05-050-R1.rnd&rdquo; for Hawaii<br/>
+                &ldquo;2002-US-AASHTO-05-050-R1.rnd&rdquo; for the conterminous United States<br/>
+                &ldquo;2003-PRVI-AASHTO-05-050-R1.rnd&rdquo; for Puerto Rico &amp; the U.S. Virgin Islands<br/>
+                &ldquo;2006-AK-AASHTO-05-050-R1.rnd&rdquo; for Alaska
               </dd>
 
             <dt id="data-metadata-spatialInterpolationMethod">
